# beer_project

./: .beer_client_token  .coverage  .coverage.Mac.localdomain.78156.XfMcsCMx  .docstr.yaml  .flake8  .gitignore  .pre-commit-config.yaml  BEER_HD_Plan_README.md  CLI_FLAGS.md  Dockerfile  Makefile  README.md  RULES.md  deliverable.md  dev-requirements.txt  docker-compose.yml  exploit_replay.py  final_roadmap.md  launch_bots.sh  pyproject.toml  start_venv.sh  start_venv_macos.sh  train_ppo_beer.py
.cursor/rules/: 000-read-roadmap.mdc  cursor-rules.mdc  docker-guidelines.mdc  python-style.mdc  roadmap-refactor-guidelines.mdc  testing-policy.mdc
docs/: BEER_Battleship_Report.md  BEER_Project_Transcription.md  T4_Protocol_and_Chat.md
scripts/: kill_beer.sh  start_venv_macos.sh
src/beer/: __init__.py  battleship.py  bot.py  bot_logic.py  cheater.py  client.py  commands.py  common.py  config.py  coord_utils.py  encryption.py  events.py  game.py  gym_beer_env.py  io_utils.py  keyexchange.py  placement_wizard.py  ppo_bot.py  reconnect_controller.py  reliability.py  replay.py  replay_attack.py  router.py  server.py  session.py  spectator_hub.py
tests/: conftest.py  test_aead.py  test_chat_spectator.py  test_checksum_recovery.py  test_commands.py  test_common_retransmission.py  test_crypto.py  test_double_drop.py  test_framing.py  test_game.py  test_integration.py  test_lobby_broadcast.py  test_promo_cascade.py  test_queue.py  test_reconnect.py  test_security.py  test_ship_placement_rule.py  test_spec_err.py  test_token_collision.py  test_turn_order.py
(+13 files in other folders)
