[build-system]
requires = [
    "setuptools>=61",
    "wheel>=0.38",
]
build-backend = "setuptools.build_meta"

[project]
name = "beer-battleship"
version = "0.1.0"
description = "Battleships: Engage in Explosive Rivalry (BEER) network game"
readme = "README.md"
authors = [
    { name = "unixthat", email = "steebea@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.scripts]
beer-server = "beer.server:main"
beer-client = "beer.client:main"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
show_error_codes = true
plugins = []
warn_unused_ignores = false

[tool.pytest.ini_options]
addopts = "-q"
